--- a/MonitorPanel.form
+++ b/MonitorPanel.form
@@ -65,7 +65,9 @@
         </Container>
         <Component class="javax.swing.JButton" name="refreshButton">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Refresh Now"/>
+            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+              <ResourceString bundle="i18n/Language.properties" key="refreshButtonDefault" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
+            </Property>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[125, 30]"/>
             </Property>
@@ -81,7 +83,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="pingLabel">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Ping status"/>
+            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+              <ResourceString bundle="i18n/Language.properties" key="pingLabelDefault" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
+            </Property>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
@@ -91,7 +95,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="pricesButton">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Fetch prices"/>
+            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+              <ResourceString bundle="i18n/Language.properties" key="pricesButton" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
+            </Property>
             <Property name="enabled" type="boolean" value="false"/>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[125, 30]"/>
